# bapun_sess_init_scripts

./: .gitignore  README.md  README_greatlakes_progress.md  environment.yml  environment_win_WSL.yml  main.py  pyproject.toml
notebooks/: BAD_pho_NeuroPy_pipeline_RatN_D3.ipynb  pho_NeuroPy1_pipeline.ipynb  pho_NeuroPy_pipeline.ipynb  pho_NeuroPy_pipeline_RatJ_Day3TwoNovel.ipynb  pho_NeuroPy_pipeline_RatJ_Day4.ipynb  pho_NeuroPy_pipeline_RatS_Day4.ipynb  pho_SpikeInterface_based.ipynb  pho_SpikeInterface_based_GL.ipynb  pho_SpikeInterface_based_GL_gl0006_HUGE_RAM-2.ipynb  pho_SpikeInterface_based_GL_gl0006_HUGE_RAM.ipynb  pho_SpikeInterface_based_Lab.ipynb  test.ipynb
scripts/: ConcatenateDatFiles.sh  cat_data_files.sh  echo_dat_files.sh  inspect_ratj_day4_timestamps_and_good_aclus.py  process_resample
spikeinterface_pipeline/: __init__.py  analyzer.py  cli.py  cli_curate_sorter.py  cli_refine.py  cli_sort.py  compat.py  config.py  curate_sorter_pipeline.py  curation.py  merge_curation.py  neuron_loading.py  paths.py  phy_export.py  pipeline.py  q_labels.py  recording.py  refine_pipeline.py  refinement.py  sorting.py  sorting_io.py
templating/: pyproject_template_dev.toml_fragment  pyproject_template_release.toml_fragment  pyproject_template_workspace.toml_fragment
tests/: test_neuron_loading.py  test_phy_export.py  test_sorter_neuron_loading.py
