[project]
name = "bapun_sess_init_scripts"
version = "0.3.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
    "ipykernel",
    "ipython",
    "jupyterlab",
    "kilosort>=4.1.7",
    "samplerate>=0.2.4",
    "shapely>=2.1.2",
    "spikeinterface-gui[desktop]>=0.13.1",
    "spikeinterface[full]>=0.104.3",
    "neuropy",
    "ipympl>=0.10.0",
    "pyqt6>=6.11.0",
    "neo",
    "probeinterface",
    "docker>=7.1.0",
    "hdbscan>=0.8.43",
    "pyqtgraph>=0.14.0",
    "panel>=1.9.0",
    "bokeh>=3.9.0",
]

[tool.uv.sources]
neuropy = { path = "../NeuroPy", editable = true }
neo = { git = "https://github.com/NeuralEnsemble/python-neo.git" }
probeinterface = { git = "https://github.com/SpikeInterface/probeinterface.git" }
spikeinterface = { path = "../spikeinterface", editable = true }

# [tool.uv.workspace]
# members = [
#     "NeuroPy",
# ]
