[project]
name = "bapun_sess_init_scripts"
version = "0.3.3"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
    "ipykernel",
    "ipython",
    "jupyterlab",
    "kilosort>=4.1.7",
    "samplerate>=0.2.4",
    "shapely>=2.1.2",
    "spikeinterface[full]>=0.104.3",
    "neuropy",
    "ipympl>=0.10.0",
    "neo",
    "probeinterface",
    "hdbscan>=0.8.43",
    "pyqt5>=5.15.7,<6",
    "pyqt5-qt5==5.15.2",
    "pyqtgraph>=0.14.0",
    "panel>=1.9.0",
    "bokeh>=3.9.0",
    "cupy-cuda12x>=13.6.0,<14",
    # UnitRefine models trained on sklearn 1.4.x; hdbscan requires >=1.6 — pin <1.7 to avoid 1.7+ pickle drift.
    "scikit-learn>=1.6,<1.7",
]

[project.scripts]
si-curate-phy = "spikeinterface_pipeline.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["spikeinterface_pipeline"]

[tool.uv.sources]
neuropy = { path = "../NeuroPy", editable = true }
neo = { git = "https://github.com/NeuralEnsemble/python-neo.git" }
probeinterface = { git = "https://github.com/SpikeInterface/probeinterface.git" }
spikeinterface = { path = "../spikeinterface", editable = true }

# [tool.uv.workspace]
# members = [
#     "NeuroPy",
# ]
