[project]
name = "bapun_sess_init_scripts"
version = "0.3.5"
description = "Helpers for initializing a brand new, un-spike-sorted session from raw data. By Pho Hale 2026-05."
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "ipykernel",
    "ipython",
    "jupyterlab",
    "kilosort>=4.1.7",
    "samplerate>=0.2.4",
    "shapely>=2.1.2",
    "spikeinterface[full]>=0.104.3",
    "neuropy",
    "ipympl>=0.10.0",
    "neo",
    "probeinterface",
    "hdbscan>=0.8.43",
    "pyqt5>=5.15.7,<6",
    "pyqt5-qt5==5.15.2",
    "pyqtgraph>=0.14.0",
    "panel>=1.9.0",
    "bokeh>=3.9.0",
    "cupy-cuda12x>=13.6.0,<14",
    # UnitRefine models trained on sklearn 1.4.x; hdbscan requires >=1.6 — pin <1.7 to avoid 1.7+ pickle drift.
    "scikit-learn>=1.6",
    "scikit-learn>=1.6,<1.7",
    "nvidia-ml-py>=13.610.43",
    "bombcell",
    # "unitrefine",
]

[project.scripts]
si-curate-phy = "spikeinterface_pipeline.cli:main"
si-curate-sorter = "spikeinterface_pipeline.cli_curate_sorter:main"
si-refine-phy = "spikeinterface_pipeline.cli_refine:main"
si-run-sorter = "spikeinterface_pipeline.cli_sort:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["spikeinterface_pipeline"]

[tool.uv.sources]
neuropy = { git = "https://github.com/CommanderPho/NeuroPy.git", branch = "origin/feature/numpy-and-pandas-2" }
neo = { git = "https://github.com/NeuralEnsemble/python-neo.git" }
probeinterface = { git = "https://github.com/SpikeInterface/probeinterface.git" }
spikeinterface = { path = "../spikeinterface", editable = true }
bombcell = { path = "../bombcell/py_bombcell", editable = true }
# unitrefine = { path = "../UnitRefine", editable = true }

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

# [tool.uv.workspace]
# members = [
#     "NeuroPy",
# ]
